<resources>
    <string name="app_name">WaterMan-Son</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="time">Time</string>\
    <string name="amount">Amount (ounces)</string>
    <string name="done">Done</string>
    <string name="remove">Remove</string>
    <string name="add">Add New</string>
    <string name="clear">Clear All</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome to WaterMan-Son</string>
    <string name="intro">Please enter your sign in here:</string>
    <string name="email_hint">User email</string>
    <string name="password_hint">Password</string>
    <string name="call">Click to call 800-426-4791 to make sure your drinking water is clean</string>
    <string name="discrip">This app help you track your water intake by displaying your entries and adding up the total amount of water drank by the user.</string>
    <string name="date_format">mm-dd-yyyy</string>
</resources>